@@ -132,30 +132,36 @@ int rpmtsOpenDB(rpmts ts, int dbmode)
 
 int rpmtsInitDB(rpmts ts, int dbmode)
 {
+#if defined(SUPPORT_INITDB)
     void *lock = rpmtsAcquireLock(ts);
     int rc = rpmdbInit(ts->rootDir, dbmode);
     lock = rpmtsFreeLock(lock);
     return rc;
+#else
+    return -1;
+#endif
 }
 
 int rpmtsRebuildDB(rpmts ts)
 {
     void *lock = rpmtsAcquireLock(ts);
     int rc;
-    if (!(rpmtsVSFlags(ts) & RPMVSF_NOHDRCHK))
-	rc = rpmdbRebuild(ts->rootDir, ts);
-    else
-	rc = rpmdbRebuild(ts->rootDir, NULL);
+    rc = rpmdbRebuild(ts->rootDir,
+    		(!(rpmtsVSFlags(ts) & RPMVSF_NOHDRCHK) ? ts : NULL));
     lock = rpmtsFreeLock(lock);
     return rc;
 }
 
 int rpmtsVerifyDB(rpmts ts)
 {
+#if defined(SUPPORT_VERIFYDB)
     return rpmdbVerify(ts->rootDir);
+#else
+    return -1;
+#endif
 }
 
-/*@-compdef@*/ /* keyp might no be defined. */
+/*@-compdef@*/ /* keyp might not be defined. */
 rpmdbMatchIterator rpmtsInitIterator(const rpmts ts, rpmTag rpmtag,
 			const void * keyp, size_t keylen)
 {
